--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -130,6 +130,7 @@ top-label:hover{
 	grid-template-columns: 1fr 2fr 1.5fr;
 	background-color: white;
 	grid-gap: 100px;
+	border-bottom: 1px solid #E6E6E6;
     align-content: space-between;
 }
 .main-buttons {
@@ -172,9 +173,6 @@ input[type="checkbox"]:checked:after {
 	content: "\2713";
 	font-size: 1.5rem;
     color: rgb(0, 95, 13); 
-    /* The following positions my tick in the center, 
-     * but you could just overlay the entire box
-     * with a full after element with a background if you want to */
     position: absolute;
     left: 50%;
     top: 50%;
@@ -207,10 +205,12 @@ input[type="checkbox"]:checked:after {
 .top-label {
 	border: none;
 	font-size: 2.5rem;
-	padding-left: 30px;
+	padding-left: 18px;
 	padding-top: 12px;
 }
+divPreLast {
 
+}
 
 .todo-element{
 	list-style: none;
@@ -256,4 +256,38 @@ a:hover{
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-size: 0.8rem;
 	padding: 12px 0;
+}
+.medium-container {
+	width: 580px;
+	margin: 0 auto;
+}
+.small-container {
+	width: 560px;
+	margin: 0 auto;
+}
+.pre-last-div, .last-div {
+	height: 6px;
+	background-color: white;
+	border-bottom: 1px solid #E6E6E6;
+	border-left: 1px solid #E6E6E6;
+	border-right: 1px solid #E6E6E6;
+}
+.smallest-container{
+	width: 180px;
+	margin: 0 auto;
+	margin-top: 8rem;
+}
+.smallest-container p{
+	
+	font-size: 11px;
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	color: rgb(156, 144, 144);
+	text-align: center;
+}
+.smallest-container a{
+	text-decoration: none;
+	font-size: 11px;
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	color: rgb(156, 144, 144);
+	cursor: pointer;
 }
